syntax = "proto3";

option go_package = "INServer/src/proto/db";

import "gogo.proto";

message DBDynamicMap {
    string UUID = 1 [(gogoproto.moretags) = "db:\"UUID\""];
    bytes SerializedData = 2 [(gogoproto.moretags) = "db:\"SerializedData\""];
}

message DBStaticMap {
    int32 ZoneID = 1 [(gogoproto.moretags) = "db:\"ZoneID\""];
    int32 MapID = 2 [(gogoproto.moretags) = "db:\"MapID\""];
    string UUID = 3 [(gogoproto.moretags) = "db:\"UUID\""];
    bytes SerializedData = 4 [(gogoproto.moretags) = "db:\"SerializedData\""];
}